Content proposals cleanup
 - Removed child object parsing from files, use elements from compiled sources
 - Code cleanup